# Wake2Text

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cblas.h  setup-build.ps1
src/: main.cpp  whisper_streaming_transcriber.cpp
